--- a/railway.toml
+++ b/railway.toml
@@ -1,2 +1,4 @@
 [build]
-rootDirectory = "/backend"
+builder = "nixpacks"
+buildCommand = "cd backend && npm install && npm run build"
+startCommand = "cd backend && npm start"
